# Graphics-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  IHATECMAKE.txt  README.md
Engine/: CMakeLists.txt  README.md
Engine/assets/shaders/: box.fs  box.vs  standard.fs  standard.vs
Engine/src/cpp/: _mesh.cpp  _model.cpp  _shader.cpp  _texture.cpp  camera.cpp  renderer.cpp  resource_manager.cpp  shader.cpp  temp_main.cpp
Engine/src/headers/: _mesh.h  _model.h  _shader.h  _texture.h  camera.h  renderer.h  resource_manager.h  shader.h
StarterGame/: CMakeLists.txt  main.cpp
